# sts-tree

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  changelog.md  conanfile.py  doxyfile  msvc-2017.bat  readme.md  vcs_info.py
cmake/: StsInfoFilesGenerator.cmake  StsProjectDesc.cmake
include/sts/tree/: TreeItem.h  TreeItem.inl.h
src/: CMakeLists.txt
src-test/: CMakeLists.txt  TestTreeItem.cpp  TestTreeItemListContainer.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
